@@ -39,7 +39,7 @@ function tx_comments_makeTempFlexFormDS() {
 	return 'FILE:' . substr($ffFileName, strlen(PATH_site));
 }
 
-if (!defined('TYPO3_MODE'))  die ('Access denied.');
+if (!defined('TYPO3_MODE')) die('Access denied.');
 
 // Add static files for plugins
 t3lib_extMgm::addStaticFile($_EXTKEY, 'pi1/static/', 'Commenting system');
@@ -84,4 +84,7 @@ t3lib_extMgm::allowTableOnStandardPages('tx_comments_comments');
 t3lib_extMgm::addToInsertRecords('tx_comments_comments');
 t3lib_extMgm::addLLrefForTCAdescr('tx_comments_comments', 'EXT:comments/locallang_csh.php');
 
+if (TYPO3_MODE == 'BE') {
+	$TBE_MODULES_EXT['xMOD_db_new_content_el']['addElClasses']['tx_comments_pi1_wizicon'] = t3lib_extMgm::extPath($_EXTKEY).'pi1/class.tx_comments_pi1_wizicon.php';
+}
 ?>
