@@ -11,7 +11,8 @@
     </meta>
     <data type="array">
         <languageKey index="default" type="array">
-            <label index="tt_content.list_type_pi1">Commenting system (comments)</label>
+            <label index="tt_content.list_type_pi1">Commenting system</label>
+			<label index="pi1_plus_wiz_description">Commenting system for pages and records (news, images, etc)</label>
             <label index="tt_content.tx_comments_pi1.code">Mode:</label>
             <label index="tt_content.tx_comments_pi1.code.I.0">Comment listing</label>
             <label index="tt_content.tx_comments_pi1.code.I.1">Comment form</label>
