@@ -1,3 +1,7 @@
+2007-11-18 Dmitry Dulepov  <dmitry@typo3.org>
+
+	* Added plugin to "New content element" wizard
+
 2007-11-16 Dmitry Dulepov  <dmitry@typo3.org>
 
 	* Enable commenting for pages
@@ -7,7 +11,7 @@
 	* Changed setup to enable other extensions to add prefixes
 	* Added hook to disable comments for individual items
 	* Changed extension's category from "Frontend" to "Frontend plugin"
-	* Adjusted page cache expiration if commnting is going to be disabled in future
+	* Adjusted page cache expiration if commenting is going to be disabled in future
 
 2007-11-07 Dmitry Dulepov  <dmitry@typo3.org>
 
